examples/errors/bad_adt_field.rsp
; ADT fields cannot be arrays.
;;! error_at: 5:14
;;! error_contains: ADT field/payload type

(struct Bad [xs: (Array i32 3)])

(defn main [] -> i32
  0)
